# VRChat-Photo-Manager-Rust

./: .gitignore  LICENSE  README.md  build-release.sh  changelog  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1732900951768-804abb3ebfb15.mjs
src/: index.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs  photosync.rs  pngmeta.rs  worldscraper.rs
src-tauri/src/frontend_calls/: change_final_path.rs  close_splashscreen.rs  config.rs  copy_image.rs  delete_photo.rs  find_world_by_id.rs  get_os.rs  get_user_photos_path.rs  load_photo_meta.rs  load_photos.rs  mod.rs  open_folder.rs  open_url.rs  relaunch.rs  start_user_auth.rs  start_with_win.rs  sync_photos.rs
src-tauri/src/util/: cache.rs  check_updates.rs  get_photo_path.rs  get_version.rs  handle_deeplink.rs  handle_uri_proto.rs  mod.rs  setup_deeplink.rs  setup_traymenu.rs
src/Components/: App.tsx  FilterMenu.tsx  NavBar.tsx  PhotoList.tsx  PhotoViewer.tsx  SettingsMenu.tsx
src/Components/Managers/: AccountManager.tsx  ConfirmationBoxManager.tsx  LoadingManager.tsx  PhotoListRenderingManager.tsx  PhotoLoadingManager.tsx  PhotoManager.tsx  PhotoViewerManager.tsx  SyncManager.tsx  ViewManager.tsx  WorldCacheManager.tsx
src/Components/Structs/: FilterType.ts  Photo.ts  PhotoListElement.ts  PhotoListElementType.ts  PhotoListRow.ts  PhotoMetadata.ts  ProfileData.ts  StorageData.ts  Vars.ts  WorldCache.ts
src/Components/Structs/PhotoListElements/: PhotoListPhoto.ts  PhotoListText.ts
src/Components/Utils/: Sort.ts
src/css/: filters.css  icons.css  list.css  settings.css  slide-bar.css  tray.css  viewer.css
