[package]
name = "vrcpm-rs"
version = "0.2.4"
description = "VRChat Photo Manager"
authors = ["_phaz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.1.2"
tauri-plugin-deep-link = "2.0.1"
dirs = "5.0.1"
notify = "6.1.1"
regex = "1.10.4"
reqwest = { version = "0.12", features = ["blocking"] }
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-shell = "2.0.0-rc.2"
tauri-plugin-http = "2.0.0-rc.0"
tauri-plugin-process = "2.0.0-rc.0"
image = "0.25.2"
fast_image_resize = { version = "4.2.1", features = [ "image" ] }

[target.'cfg(windows)'.dependencies]
mslnk = { version = "0.1.8" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
debug = true
debug-assertions = true
