[package]
name = "VRChatPhotoManager"
version = "0.2.5"
description = "VRChat Photo Manager"
authors = ["_phaz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [ "tray-icon", "image-png", "devtools" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.1.2"
tauri-plugin-deep-link = "2.0.1"
dirs = "5.0.1"
notify = "6.1.1"
regex = "1.10.4"
reqwest = { version = "0.12", features = ["blocking"] }
image = "0.25.2"
fast_image_resize = { version = "4.2.1", features = [ "image" ] }
arboard = "3.6.0"
tauri-plugin-single-instance = { version = "2.3.2", features = ["deep-link"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-http = "2.5.1"
tauri-plugin-process = "2.3.0"
[target.'cfg(windows)'.dependencies]
mslnk = { version = "0.1.8" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
debug = true
debug-assertions = true
